--- a/application/.env.example
+++ b/application/.env.example
@@ -80,3 +80,6 @@ API_TOKEN_EXPIRE_TIME=token_expire_time
 GLOBAL_XSS_FILTERING=true
 
 IMPRIMIR_ANEXOS=false
+
+WHATSAPP_ENDPOINT=http://localhost:9090/api     # ex: url do seu wpp connect
+WHATSAPP_SECRET_KEY=123456                      # secretKey do seu wpp connect
